# nana

./: .editorconfig  .gitignore  .prettierignore  Justfile  README.md  TODO.md  index.html  justfile  package-lock.json  package.json  postcss.config.cjs  rollup.config.js  svelte.config.js  tailwind.config.cjs  tailwind.config.js  tsconfig.json  vite.config.js
.github/workflows/: ci.yml
public/: global.css  index.html
src/: App.svelte  Tailwindcss.svelte  global.d.ts  main.css  main.ts  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  nushell.rs  run_external.rs  windows_utils.rs
src/app/: App.tsx  Card.tsx  CompletionList.tsx  Output.tsx  Prompt.tsx  Result.tsx  ResultList.tsx  Spinner.tsx
src/support/: formatting.ts  nana.ts  randomId.ts  useShortcut.ts
