[package]
name = "nana"
version = "0.1.0"
description = "An interactive, visual Nushell in notebook form"
authors = ["you"]
license = ""
repository = ""
default-run = "nana"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0-rc.12", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
# enable devtools even in release mode; makes things easier for devs and we don't have a good reason to disable it
tauri = { version = "1.0.0", features = ["api-all", "devtools"] }
nu-engine = { git = "https://github.com/nushell/nushell", branch = "main" }
nu-protocol = { git = "https://github.com/nushell/nushell", branch = "main" }
nu-parser = { git = "https://github.com/nushell/nushell", branch = "main" }
nu-path = { git = "https://github.com/nushell/nushell", branch = "main" }
nu-command = { git = "https://github.com/nushell/nushell", branch = "main" }
nu-cli = { git = "https://github.com/nushell/nushell", branch = "main" }
reedline = { git = "https://github.com/nushell/reedline", branch = "main", features = [
  "bashisms",
] }
parking_lot = "0.12.0"
strip-ansi-escapes = "0.1.1"
regex = "1.5.5"
pathdiff = "0.2.1"
itertools = "0.10.3"
lscolors = "0.10.0"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(windows)'.dependencies.windows]
version = "0.37.0"
features = [
  "alloc",
  "Win32_Foundation",
  "Win32_Graphics_Dwm",
  "Win32_System_Registry",
]
