[package]
name = "nana"
version = "0.1.0"
description = "An interactive, visual Nushell in notebook form"
authors = ["you"]
license = ""
repository = ""
default-run = "nana"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[dependencies]
serde_json = "1.0.93"
serde = { version = "1.0.152", features = ["derive"] }
nu-engine = { git = "https://github.com/nushell/nushell", tag = "0.65.0" }
nu-protocol = { git = "https://github.com/nushell/nushell", tag = "0.65.0" }
nu-parser = { git = "https://github.com/nushell/nushell", tag = "0.65.0" }
nu-path = { git = "https://github.com/nushell/nushell", tag = "0.65.0" }
nu-command = { git = "https://github.com/nushell/nushell", tag = "0.65.0" }
nu-cli = { git = "https://github.com/nushell/nushell", tag = "0.65.0" }
reedline = { version = "0.8.0", features = ["bashisms", "sqlite"] }
parking_lot = "0.12.1"
regex = "1.7.1"
pathdiff = "0.2.1"
itertools = "0.10.5"
lscolors = "0.13.0"
# enable devtools even in release mode; makes things easier for devs and we don't have a good reason to disable it
tauri = {version = "1.2.4", features = ["api-all", "clipboard", "devtools"] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(windows)'.dependencies.windows]
version = "0.39.0"
features = [
  "Win32_Foundation",
  "Win32_Graphics_Dwm",
  "Win32_System_Registry",
]

[patch.crates-io]
reedline = { git = "https://github.com/nushell/reedline", tag = "v0.8.0" }
