[package]
name = "nana"
version = "0.1.0"
description = "An interactive, visual Nushell in notebook form"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
default-run = "nana"

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
# enable devtools even in release mode; makes things easier for devs and we don't have a good reason to disable it
tauri = {version = "1.6", features = ["clipboard", "devtools", "api-all"] }

serde_json = "1"
serde = { version = "1", features = ["derive"] }

nu-engine = "0.91"
nu-protocol = "0.91"
nu-parser = "0.91"
nu-path = "0.91"
nu-command = "0.91"
nu-cli = "0.91"
nu-cmd-lang = "0.91"

reedline = { version = "0.30.0", features = ["bashisms", "sqlite"] }

parking_lot = "0.12.1"
regex = "1.10.3"
pathdiff = "0.2.1"
itertools = "0.12.1"
lscolors = "0.17.0"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(windows)'.dependencies.windows]
version = "0.39.0"
features = [
  "Win32_Foundation",
  "Win32_Graphics_Dwm",
  "Win32_System_Registry",
]

[patch.crates-io]
reedline = { git = "https://github.com/nushell/reedline", tag = "v0.30.0" }
